src/styles/modal.css
.modal {
    max-width: 21.875rem;
    width: 100%;
    margin-inline: auto;
    background-color: var(--background-tertiary);
    padding-block: 2.5rem;
    padding-inline: 1.25rem;
    border-radius: 0.75rem;

    position: fixed;
    top: 55%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 3;

    max-height: 90vh;
    overflow-y: auto;

    scrollbar-width: thin; 
    scrollbar-color: var(--border-primary) transparent;

    &::-webkit-scrollbar {
        width: 0.5rem;
    }

    &::-webkit-scrollbar-track {
        background: transparent;
        margin-block: 0.5rem;
    }

    &::-webkit-scrollbar-thumb {
        background-color: var(--border-primary);
        border-radius: 8px;
    }

    &::-webkit-scrollbar-thumb:hover {
        background-color: var(--border-secondary);
    }

    & .modal-header {
        display: grid;
        gap: 0.25rem;
        margin-bottom: 1.75rem;
        & #close-icon {
            position: absolute;
            right: 2%;
            top: 2%;
            cursor: pointer;
        }

        & h2 {
            font: var(--title);
            color: var(--content-primary);
        }

        & p {
            font: var(--p-md);
        }
    }

    & .inputs-wrapper {
        display: grid;
        gap: 1rem;
        margin-bottom: 1rem;
        & .input-wrapper {
            display: grid;
            gap: 0.5rem;
        }

        & label {
            font: var(--label-md);
            color: var(--content-primary);
        }

        & .input-field {
            display: flex;
            align-items: center;
            gap: 0.5rem;
            padding: 0.75rem;
            border: 1px solid var(--border-primary);
            border-radius: 0.5rem;
            background-color: transparent;
            transition: border 0.3s ease;

            &:hover {
                border-color: var(--border-secondary);
            }

            &:focus-within {
                border-color: var(--content-brand);
            }

            & img {
                width: 1.25rem;
                height: 1.25rem;
            }

            & input {
                width: 100%;
                border: none;
                background: transparent;
                outline: none;
                font: var(--label-lg);
                font-weight: 400;
                color: var(--content-primary);
            }
        }

        & .textarea-wrapper {
            display: grid;
            gap: 0.5rem;
        }

        & textarea {
            padding: 0.75rem;
            width: 100%;
            border: 1px solid var(--border-primary);
            background-color: transparent;
            border-radius: 0.5rem;
            font: var(--label-lg);
            font-weight: 400;
            color: var(--content-primary);
            resize: none;
            transition: border 0.3s ease;

            &:hover {
                outline: none;
                border-color: var(--border-secondary);
            }

            &:focus {
                outline: none;
                border-color: var(--content-brand);
            }
        }
    }


    & .schedule-wrapper {
        display: flex;
        flex-direction: column;
        gap: 1rem;
        margin-bottom: 1.75rem;
        & label {
            font: var(--label-md);
            color: var(--content-primary);
        }
        & .date-wrapper {
            display: grid;
            gap: 0.5rem;
            & .input {
                display: inline-flex;
                align-items: center;
                gap: 0.5rem;
                background-color: transparent;
                border: 1px solid var(--border-primary);
                border-radius: 0.5rem;
                padding: 0.75rem;
                cursor: pointer;
                min-width: 11.875rem;
                min-height: 3rem;
                width: 100%;
                transition: border 0.3s ease;
        
                & .input__icon {
                    width: 1.25rem;
                    height: 1.25rem;
                    flex-shrink: 0;
                }
        
                & input[type="date"] {
                    background: transparent;
                    border: none;
                    outline: none;
                    color: var(--content-tertiary);
                    font: var(--label-lg);
                    font-weight: 400;
                    cursor: pointer;
                    appearance: none;
                    -webkit-appearance: none;
                    min-width: 11.875rem;
                    max-height: 3rem;
                    width: 100%;
        
                    &::-webkit-calendar-picker-indicator {
                        display: none;
                    }
        
                    &::-webkit-inner-spin-button,
                    &::-webkit-clear-button {
                        display: none;
                    }
                }
        
                & .input__arrow {
                    width: 1.25rem;
                    height: 1.25rem;
                    flex-shrink: 0;
                }

                &:hover {
                    border-color: var(--border-secondary);
                }

                &:focus-within {
                    border-color: var(--content-brand);
                }
            }
        }

        & .hour-wrapper {
            display: grid;
            gap: 0.5rem;
            & .input-field {
                display: flex;
                align-items: center;
                gap: 0.5rem;
                padding: 0.75rem;
                border: 1px solid var(--border-primary);
                border-radius: 0.5rem;
                cursor: pointer;
                min-width: 11.875rem;
                min-height: 3rem;
                width: 100%;

                transition: border 0.3s ease;

                &:hover {
                    border-color: var(--border-secondary);
                }

                &:focus-within {
                    border-color: var(--content-brand);
                }

                & img {
                    width: 1.25rem;
                    height: 1.25rem;
                    flex-shrink: 0;
                    cursor: pointer;
                }

                & select {
                    flex: 1;
                    border: none;
                    background: transparent;
                    outline: none;
                    font: var(--label-lg);
                    font-weight: 400;
                    color: var(--content-primary);
                    cursor: pointer;
                    appearance: none;
                    -webkit-appearance: none;
                    -moz-appearance: none;
                    width: 100%;
                }

                & #hour:invalid {
                    color: var(--content-secondary);
                }
    
                & #hour option {
                    color: #000;
                    font: var(--label-lg);
                    font-weight: 400;
                    &:disabled {
                        color: var(--content-secondary);
                        font-style: italic;
                    }
                }
            }
        }
    }

    & .btn.btn-schedule {
        margin-left: auto;
    }
}

.display {
    display: none;
}

.filter {
    filter: blur(12px);
    pointer-events: none;
    transition: filter 0.3s ease;
}

@media (width >= 80em) {
    .modal {
        top: 50%;
        max-width: 30rem;
        padding: 2.5rem;
        & .schedule-wrapper {
            display: flex;
            flex-direction: row;
            & .date-wrapper {
                & .input {
                    & input[type="date"] {
                        min-width: 0;
                        max-width: 11.875rem;
                        max-height: 3rem;
                    }
                }
            }
        }
    }
}

